--- a/html/buceo.html
+++ b/html/buceo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>buceo</title>
+    <title>Lugares para bucear</title>
+    <meta name="description" content="Esta experiencia es ideal para principiantes que quieran sumergirse en el mundo acuático. Es difícil explicarle a alguien lo que se siente al bucear, veni a vivir una experiencia inolvidable.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/scss/estilo.css"/>
@@ -27,16 +28,13 @@
             </div>
           </div>
         </div>
-      </nav>
-      
+      </nav>      
       <h1>Buceo</h1>
       <p><h2 class="primerEstilo" data-aos="flip-left"
         data-aos-easing="ease-out-cubic"
         data-aos-duration="2000">Fondo del mar de Maragogi</h2>
-      </p>
-   
-    </header>
-   
+      </p>   
+    </header>  
    
     <main>
       <p class="textosEstilos">
